CSS fixes for dashboards - fixed carousel not showing - fixed CSS search bar overrides - adjusted positioning

--- a/sentify/website/static/company_search.css
+++ b/sentify/website/static/company_search.css
@@ -1201,14 +1201,14 @@
 }
 
 .companies-container-2 {
-    top: 52.5%;
-    margin-left: 8%;
+    top: 63.5%;
+    margin-left: 10%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     grid-gap:  20px;
     max-width: 85%;
+    max-height: 820px;
     position: relative;
-
     overflow-y: auto; /* Enable vertical scrolling */
 }
 
@@ -1278,8 +1278,8 @@
 }
 
 .container-suggested {
-    top: 55%;
-    left: 7.5%;
+    top: 10%;
+
     width: 85%;
     position: relative;
 }
