--- a/sentify/website/static/dashboard.css
+++ b/sentify/website/static/dashboard.css
@@ -2,7 +2,7 @@
 
 .dashboard {
     position: relative;
-    left: 200px;
+    left: 100px;
     width: 1300px;
     margin: 20px;
     height: 2000px;
